-rifattorizzato modello dati -creata pagina di visualizzazione pazienti

--- a/src/main/webapp/WEB-INF/layouts/views.xml
+++ b/src/main/webapp/WEB-INF/layouts/views.xml
@@ -6,4 +6,7 @@
 	<definition name="index" extends="DefaultTemplate">
 	    <put-attribute name="body"	value="/WEB-INF/views/index.jsp" />
 	</definition>
+        <definition name="pazienti" extends="DefaultTemplate">
+	    <put-attribute name="body"	value="/WEB-INF/views/pazienti.jsp" />
+	</definition>
 </tiles-definitions>
