--- a/src/main/webapp/WEB-INF/layouts/layouts.xml
+++ b/src/main/webapp/WEB-INF/layouts/layouts.xml
@@ -9,4 +9,7 @@
         <put-attribute name="menu" value="/WEB-INF/views/template/menu.jsp" />
         <put-attribute name="body" value="" />
     </definition>
+    <definition name="BlankTemplate" template="/WEB-INF/views/template/blankmain.jsp">
+        <put-attribute name="body" value=""/>
+    </definition>
 </tiles-definitions>
