--- a/src/main/webapp/WEB-INF/layouts/views.xml
+++ b/src/main/webapp/WEB-INF/layouts/views.xml
@@ -24,6 +24,12 @@
         <definition name="inseriscirisultati" extends="DefaultTemplate">
 	    <put-attribute name="body"	value="/WEB-INF/views/esami/inseriscirisultati.jsp" />
 	</definition>
+        <definition name="imieiesami" extends="DefaultTemplate">
+	    <put-attribute name="body"	value="/WEB-INF/views/esami/imieiesami.jsp" />
+	</definition>
+        <definition name="login" extends="BlankTemplate">
+            <put-attribute name="body" value="/WEB-INF/views/login.jsp"/>
+        </definition>
         <definition name="exception" extends="BlankTemplate">
             <put-attribute name="body" value="/WEB-INF/views/exception.jsp"/>
         </definition>
